# transcript

./: .gitignore  README.md  benchmark.py  pyproject.toml  requirements.txt  transcribe.py
docs/ideas/: meeting-transcriber.md
tasks/: plan.md  todo.md
tests/: test_transcribe.py
