[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-transcriber"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "whisperx",
    "torch",
    "pyannote.audio>=3.1",
    "python-dotenv",
    "tqdm",
]

[project.scripts]
transcribe = "transcribe:main"

[tool.setuptools]
py-modules = ["transcribe"]
